cmake_minimum_required(VERSION 3.20)
project(BharatOS_Kernel C ASM)
set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
# ── Toolchain file provides all compiler/linker settings.
# Pass -DCMAKE_TOOLCHAIN_FILE=../delivery/cmake/toolchains/<arch>-elf.cmake at configure time.
# See BUILD.md for exact commands for each platform.

# Provide an interface library for kernel components to share common includes
set(BHARAT_BOOT_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/core/boot/include")
if(NOT EXISTS "${BHARAT_BOOT_INCLUDE_DIR}/boot/boot_info.h")
    message(FATAL_ERROR "Missing canonical boot include root: ${BHARAT_BOOT_INCLUDE_DIR}")
endif()

add_library(bharat_kernel_includes INTERFACE)

function(bharat_require_root out_var canonical_root sentinel_rel kind_label)
    if(NOT EXISTS "${canonical_root}/${sentinel_rel}")
        message(FATAL_ERROR "Missing canonical ${kind_label} root: ${canonical_root}")
    endif()
    set(${out_var} "${canonical_root}" PARENT_SCOPE)
endfunction()

bharat_require_root(BHARAT_ARCH_ROOT "${CMAKE_SOURCE_DIR}/core/arch" "x86/x86_64/boot/boot.S" "arch")
bharat_require_root(BHARAT_HAL_ROOT "${CMAKE_SOURCE_DIR}/core/hal" "common/discovery.c" "hal")
set(BHARAT_ARCH_HAL_ROOT "${BHARAT_ARCH_ROOT}/hal")
bharat_require_root(BHARAT_PLATFORM_ROOT "${CMAKE_SOURCE_DIR}/core/platform" "boards/qemu-virt-x86_64/board.c" "platform")
bharat_require_root(BHARAT_LIB_ROOT "${CMAKE_SOURCE_DIR}/core/lib" "include/ipc_user.h" "lib")
bharat_require_root(BHARAT_KERNEL_STAGING_ROOT "${CMAKE_SOURCE_DIR}/core/kernel/staging" "ai/ai_kernel_bridge.c" "kernel staging")
set(BHARAT_KERNEL_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/core/kernel/include")
if(NOT EXISTS "${BHARAT_KERNEL_INCLUDE_DIR}/bharat_config.h.in")
    message(FATAL_ERROR "Missing canonical kernel include root: ${BHARAT_KERNEL_INCLUDE_DIR}")
endif()

# Define and create the generated include directory in the build tree
set(BHARAT_GENERATED_INCLUDE_DIR "${CMAKE_BINARY_DIR}/generated/include")
file(MAKE_DIRECTORY "${BHARAT_GENERATED_INCLUDE_DIR}")

target_include_directories(bharat_kernel_includes INTERFACE
    ${BHARAT_KERNEL_INCLUDE_DIR}
    ${BHARAT_KERNEL_INCLUDE_DIR}/generated
    ${CMAKE_SOURCE_DIR}/core/personalities/runtime/include
    ${BHARAT_HAL_ROOT}/include
    ${CMAKE_SOURCE_DIR}/interface/include
    ${BHARAT_LIB_ROOT}/include
    ${BHARAT_BOOT_INCLUDE_DIR}
    ${BHARAT_HAL_ROOT}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)
# In standalone kernel builds, define the bharat_generated_includes target
if(NOT TARGET bharat_generated_includes)
    add_library(bharat_generated_includes INTERFACE)
    target_include_directories(bharat_generated_includes INTERFACE "${BHARAT_GENERATED_INCLUDE_DIR}")
endif()
target_link_libraries(bharat_kernel_includes INTERFACE bharat_generated_includes)

# Kernel subdir can be configured standalone (without top-level CMakeLists).
# In that mode, hydrate manifest/version metadata and component registration
# helpers that are otherwise generated by the root build.
if(NOT COMMAND bharat_register_component)
    set(BHARAT_MANIFEST_CANDIDATES
        "${CMAKE_SOURCE_DIR}/delivery/release/manifest/os-release.json"
        "${CMAKE_SOURCE_DIR}/release/manifest/os-release.json"
    )
    set(BHARAT_MANIFEST_JSON "")
    foreach(_manifest_path IN LISTS BHARAT_MANIFEST_CANDIDATES)
        if(EXISTS "${_manifest_path}")
            set(BHARAT_MANIFEST_JSON "${_manifest_path}")
            if(_manifest_path MATCHES "/release/manifest/os-release.json$"
               AND NOT _manifest_path MATCHES "/delivery/release/manifest/os-release.json$")
                message(WARNING "[migration-warning] Using legacy manifest path: ${_manifest_path}")
            endif()
            break()
        endif()
    endforeach()
    set(BHARAT_GEN_SCRIPT "${CMAKE_SOURCE_DIR}/tools/gen_manifest.py")
    set(BHARAT_GEN_DIR "${CMAKE_BINARY_DIR}/generated")

    if(EXISTS "${BHARAT_MANIFEST_JSON}" AND EXISTS "${BHARAT_GEN_SCRIPT}")
        find_package(Python3 QUIET COMPONENTS Interpreter)
        if(Python3_Interpreter_FOUND)
            file(MAKE_DIRECTORY "${BHARAT_GEN_DIR}")
            execute_process(
                COMMAND "${Python3_EXECUTABLE}" "${BHARAT_GEN_SCRIPT}"
                        "${BHARAT_MANIFEST_JSON}" "${BHARAT_GEN_DIR}"
                WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
                RESULT_VARIABLE BHARAT_GEN_RESULT
            )
            if(BHARAT_GEN_RESULT EQUAL 0 AND EXISTS "${BHARAT_GEN_DIR}/BharatVersion.cmake")
                include("${BHARAT_GEN_DIR}/BharatVersion.cmake")
            endif()
        endif()
    endif()
endif()

if(NOT DEFINED BHARAT_KERNEL_VERSION)
    set(BHARAT_KERNEL_VERSION "0.0.0-local")
endif()
if(NOT DEFINED BHARAT_KERNEL_ABI)
    set(BHARAT_KERNEL_ABI "0")
endif()
if(NOT DEFINED BHARAT_OS_CHANNEL)
    set(BHARAT_OS_CHANNEL "dev")
endif()
if(NOT COMMAND bharat_register_component)
    function(bharat_register_component)
    endfunction()
endif()
# ── Configuration Header ────────────────────────────────────────────────────
# These variables are normally set in the root CMakeLists.txt. 
# For kernel-only builds, we provide defaults if not set.
if(NOT DEFINED BHARAT_ARCH_X86)
    set(BHARAT_ARCH_X86 1)
endif()
if(NOT DEFINED BHARAT_ARCH_64BIT)
    set(BHARAT_ARCH_64BIT 1)
endif()
if(NOT DEFINED BHARAT_ARCH_VARIANT_GENERIC)
    set(BHARAT_ARCH_VARIANT_GENERIC 1)
endif()
if(NOT DEFINED BHARAT_PROFILE_DESKTOP)
    set(BHARAT_PROFILE_DESKTOP 1)
endif()
if(NOT DEFINED BHARAT_IRQ_DISPATCH_GENERIC)
    set(BHARAT_IRQ_DISPATCH_GENERIC 1)
endif()
if(NOT DEFINED BHARAT_IRQ_DISPATCH_MIXED)
    set(BHARAT_IRQ_DISPATCH_MIXED 0)
endif()
if(NOT DEFINED BHARAT_IRQ_DISPATCH_RT)
    set(BHARAT_IRQ_DISPATCH_RT 0)
endif()
if(NOT DEFINED BHARAT_PERSONALITY_NATIVE)
    set(BHARAT_PERSONALITY_NATIVE 1)
endif()
if(NOT BHARAT_MAX_CORES)
    set(BHARAT_MAX_CORES 32)

if(NOT BHARAT_CAP_REVOKE_MAX)
    set(BHARAT_CAP_REVOKE_MAX 256)
endif()
endif()
# Multikernel Configuration Defaults
if(NOT DEFINED CONFIG_MULTIKERNEL)
    set(CONFIG_MULTIKERNEL 1)
endif()
if(NOT DEFINED CONFIG_HETEROGENEOUS_CPU)
    set(CONFIG_HETEROGENEOUS_CPU 1)
endif()
if(NOT DEFINED CONFIG_URPC)
    set(CONFIG_URPC 1)
endif()

# Generate the configuration header into the build directory
configure_file(
    "${BHARAT_KERNEL_INCLUDE_DIR}/bharat_config.h.in"
    "${BHARAT_GENERATED_INCLUDE_DIR}/bharat_config.h"
    @ONLY
)
option(BHARAT_BOOT_GUI "Enable boot-time GUI handoff metadata" ON)
if(NOT DEFINED BHARAT_BOOT_HW_PROFILE OR "${BHARAT_BOOT_HW_PROFILE}" STREQUAL "")
    message(FATAL_ERROR "BHARAT_BOOT_HW_PROFILE must not be empty")
endif()
if(BHARAT_BOOT_GUI)
    add_compile_definitions(BHARAT_BOOT_GUI=1)
else()
    add_compile_definitions(BHARAT_BOOT_GUI=0)
endif()
string(TOLOWER "${BHARAT_BOOT_HW_PROFILE}" KERNEL_PROFILE_LOWER)
if(NOT KERNEL_PROFILE_LOWER MATCHES "^(generic|desktop|server|vm|laptop|edge|rtos|mobile|datacenter|network_appliance|avh-corstone310)$")
    message(FATAL_ERROR "Invalid BHARAT_BOOT_HW_PROFILE='${KERNEL_PROFILE_LOWER}'. Allowed: generic, desktop, server, vm, laptop, edge, rtos, mobile, datacenter, network_appliance, avh-corstone310")
endif()
add_compile_definitions(BHARAT_BOOT_HW_PROFILE_${KERNEL_PROFILE_LOWER}=1)
# ── Architecture selection ──────────────────────────────────────────────────
# Prefer root-level ARCH selection when available, otherwise infer from processor.
if(NOT DEFINED ARCH)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "riscv32")
        set(ARCH "riscv32")
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "riscv")
        set(ARCH "riscv64")
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
        set(ARCH "arm32")
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
        set(ARCH "arm64")
    else()
        set(ARCH "x86_64")
    endif()
endif()
string(TOLOWER "${ARCH}" ARCH)

set(ARCH_CRYPTO_SRC ${BHARAT_ARCH_ROOT}/common/arch_crypto_stub.c)
set(ARCH_TLB_ACCEL_SRC ${BHARAT_ARCH_ROOT}/common/arch_tlb_accel_stub.c)
# ── Boot and HAL sources (arch-specific) ────────────────────────────────────
if(ARCH STREQUAL "x86_64")
    set(BOOT_SRC ${BHARAT_ARCH_ROOT}/x86/x86_64/boot/boot.S)
    set(ARCH_HAL ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_cpu.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_discovery.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_mm.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/trap_entry.S ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_pt_x86_64.c ${BHARAT_HAL_ROOT}/common/hal_pt.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/vtd_iommu.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_irq.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_timer.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/dma.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_secure_boot.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/cpu_relax.c ${BHARAT_HAL_ROOT}/common/iommu/null/null_iommu.c ${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/iommu/intel_vtd/intel_vtd_stub.c)
    set(ARCH_CONTEXT_SWITCH ${BHARAT_ARCH_ROOT}/x86/x86_64/context_switch.c ${BHARAT_ARCH_ROOT}/x86/x86_64/context_switch.S ${BHARAT_ARCH_ROOT}/x86/x86_64/syscall_entry.S)
    set(ARCH_CPU_CAPS_SRC ${BHARAT_ARCH_ROOT}/x86/x86_64/cpu_caps.c)
    set(ARCH_EXT_STATE_SRC ${BHARAT_ARCH_ROOT}/x86/x86_64/ext_state.c)
    list(APPEND ARCH_CRYPTO_SRC ${BHARAT_ARCH_ROOT}/x86/x86_64/arch_crypto_x86.c)
    list(APPEND ARCH_TLB_ACCEL_SRC ${BHARAT_ARCH_ROOT}/x86/x86_64/tlb_accel.c)
elseif(ARCH STREQUAL "riscv64")
    set(BOOT_SRC ${BHARAT_ARCH_ROOT}/riscv/riscv64/boot/boot.S)
    set(ARCH_HAL ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_cpu.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_discovery.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_mm.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/boot/feature_probe.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/trap_entry.S ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_pt_riscv64.c ${BHARAT_HAL_ROOT}/common/hal_pt.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/iopmp.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_irq.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_timer.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/dma.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_secure_boot.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/cpu_relax.c ${BHARAT_HAL_ROOT}/common/iommu/null/null_iommu.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/iommu/riscv_iommu/riscv_iommu_stub.c)
    set(ARCH_HAL_EXTRA ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/shakti_bsp.c)
    # VirtIO GPU display driver: only for qemu-virt + GUI enabled
    if(BHARAT_BOOT_GUI AND "${BHARAT_RISCV_SOC_PROFILE}" STREQUAL "qemu-virt")
        #list(APPEND ARCH_HAL ${BHARAT_ARCH_HAL_ROOT}/riscv/virtio_gpu.c)
        add_compile_definitions(BHARAT_VIRTIO_GPU=1)
    endif()
    set(ARCH_CONTEXT_SWITCH ${BHARAT_ARCH_ROOT}/riscv/riscv64/context_switch.c ${BHARAT_ARCH_ROOT}/riscv/riscv64/context_switch.S)
    set(ARCH_CPU_CAPS_SRC ${BHARAT_ARCH_ROOT}/riscv/riscv64/cpu_caps.c)
    set(ARCH_EXT_STATE_SRC ${BHARAT_ARCH_ROOT}/riscv/riscv64/ext_state.c)
elseif(ARCH STREQUAL "riscv32")
    set(BOOT_SRC ${BHARAT_ARCH_ROOT}/riscv/riscv32/boot/boot.S)
    set(ARCH_HAL ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_cpu.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/trap_entry.S ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_pt_riscv32.c ${BHARAT_HAL_ROOT}/common/hal_pt.c ${BHARAT_HAL_ROOT}/common/hal_secure_boot_unsupported.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/cpu_relax.c ${BHARAT_HAL_ROOT}/common/iommu/null/null_iommu.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_discovery.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_mm.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_irq.c ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_timer.c ${BHARAT_ARCH_ROOT}/riscv/riscv32/boot/entry.c)
    set(ARCH_HAL_EXTRA ${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/shakti_bsp.c)
    set(ARCH_CONTEXT_SWITCH ${BHARAT_ARCH_ROOT}/riscv/riscv64/context_switch.c ${BHARAT_ARCH_ROOT}/riscv/riscv64/context_switch.S)
    set(ARCH_CPU_CAPS_SRC ${BHARAT_ARCH_ROOT}/riscv/riscv64/cpu_caps.c)
    set(ARCH_EXT_STATE_SRC ${BHARAT_ARCH_ROOT}/riscv/riscv64/ext_state.c)
elseif(ARCH STREQUAL "arm64")
    set(BOOT_SRC ${BHARAT_ARCH_ROOT}/arm/arm64/boot/boot.S)
    set(ARCH_HAL ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_cpu.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_discovery.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_mm.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/trap_entry.S ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_pt_arm64.c ${BHARAT_HAL_ROOT}/common/hal_pt.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/smmu.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_irq.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_timer.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/dma.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_secure_boot.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/cpu_relax.c ${BHARAT_HAL_ROOT}/common/iommu/null/null_iommu.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/iommu/arm_smmu/arm_smmu_stub.c)
    set(ARCH_CONTEXT_SWITCH ${BHARAT_ARCH_ROOT}/arm/arm64/context_switch.c ${BHARAT_ARCH_ROOT}/arm/arm64/context_switch.S)
    set(ARCH_HAL_EXTRA ${BHARAT_ARCH_HAL_ROOT}/arm/arm64/topology_fdt.c)
    set(ARCH_CPU_CAPS_SRC ${BHARAT_ARCH_ROOT}/arm/arm64/cpu_caps.c)
    set(ARCH_EXT_STATE_SRC ${BHARAT_ARCH_ROOT}/arm/arm64/ext_state.c)
elseif(ARCH STREQUAL "arm32")
    set(BOOT_SRC ${BHARAT_ARCH_ROOT}/arm/arm32/boot/boot.S)
    set(ARCH_HAL ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/hal_cpu.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/trap_entry.S ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/hal_pt_arm32.c ${BHARAT_HAL_ROOT}/common/hal_pt.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/hal_discovery.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/hal_timer.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/hal_irq.c ${BHARAT_ARCH_HAL_ROOT}/mpu/arm32/mpu_backend.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/dma.c ${BHARAT_HAL_ROOT}/common/hal_secure_boot_unsupported.c ${BHARAT_ARCH_HAL_ROOT}/arm/arm32/cpu_relax.c ${BHARAT_HAL_ROOT}/common/iommu/null/null_iommu.c)
    set(ARCH_CONTEXT_SWITCH ${BHARAT_ARCH_ROOT}/arm/arm32/context_switch.c ${BHARAT_ARCH_ROOT}/arm/arm32/context_switch.S)
    set(ARCH_CPU_CAPS_SRC ${BHARAT_ARCH_ROOT}/arm/arm32/cpu_caps.c)
    set(ARCH_EXT_STATE_SRC ${BHARAT_ARCH_ROOT}/arm/arm32/ext_state.c)
endif()

if(ARCH STREQUAL "x86_64")
    set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/linker.ld")
elseif(ARCH MATCHES "riscv.*64")
    set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/linker_riscv64.ld")
elseif(ARCH MATCHES "arm.*64" OR ARCH MATCHES "aarch64")
    set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/linker_arm64.ld")
elseif(ARCH MATCHES "arm.*32")
    set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/linker_arm32.ld")
elseif(ARCH MATCHES "riscv.*32")
    set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/linker_riscv32.ld")
else()
    set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/linker.ld")
    message(WARNING "Unknown ARCH='${ARCH}', falling back to x86_64 linker script!")
endif()
if(ARCH STREQUAL "riscv64")
    option(BHARAT_RISCV_BUILD_PAYLOAD_BIN "Emit payload.bin from kernel.elf for OpenSBI packaging" ON)
    set(BHARAT_RISCV_SOC_PROFILE "qemu-virt" CACHE STRING "RISC-V SoC profile (qemu-virt, shakti-e, shakti-c, shakti-i)")
    set_property(CACHE BHARAT_RISCV_SOC_PROFILE PROPERTY STRINGS qemu-virt shakti-e shakti-c shakti-i)
    if(NOT BHARAT_RISCV_SOC_PROFILE MATCHES "^(qemu-virt|shakti-e|shakti-c|shakti-i)$")
        message(FATAL_ERROR "Invalid BHARAT_RISCV_SOC_PROFILE='${BHARAT_RISCV_SOC_PROFILE}'. Allowed: qemu-virt, shakti-e, shakti-c, shakti-i")
    endif()
    add_compile_definitions(BHARAT_RISCV_SOC_PROFILE_STR="${BHARAT_RISCV_SOC_PROFILE}")
endif()
# ── Memory Layer Options ──────────────────────────────────────────────────
option(BHARAT_PROFILE_MMU_FULL "Full VM, demand paging, COW, shared memory" ON)
option(BHARAT_PROFILE_MMU_LITE "Static/eager mappings only" OFF)
option(BHARAT_PROFILE_MPU_ONLY "MPU regions only, no VM" OFF)
if(BHARAT_PROFILE_MMU_FULL)
    add_compile_definitions(BHARAT_PROFILE_MMU_FULL=1)
elseif(BHARAT_PROFILE_MMU_LITE)
    add_compile_definitions(BHARAT_PROFILE_MMU_LITE=1)
elseif(BHARAT_PROFILE_MPU_ONLY)
    add_compile_definitions(BHARAT_PROFILE_MPU_ONLY=1)
endif()
# ── Memory Subsystem Targets ──────────────────────────────────────────────

# Minimal Core: PMM and basic allocation (Always Included)
add_library(bharat_mm_pmm OBJECT
    src/mm/pmm/pmm.c
    src/mm/pmm/pmm_pcache.c
    src/mm/pmm/pmm_debug.c
    src/mm/pmm/early_alloc.c
    src/mm/pmm/slab.c
    src/mm/pmm/kmem_aligned.c
    src/mm/pmm/numa.c
    src/mm/mem_class.c
    src/mm/pmm/numa_policy.c
)
target_link_libraries(bharat_mm_pmm PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
target_compile_options(bharat_mm_pmm PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

# IOMMU Support (Can be stubbed via configuration)
if(BHARAT_ENABLE_IOMMU)
    add_library(bharat_mm_iommu OBJECT
        src/mm/iommu/iommu.c
        src/mm/iommu/iommu_domain.c
        src/mm/iommu/iommu_map.c
        src/mm/iommu/iommu_fault.c
        src/mm/iommu/iommu_device.c
    )
else()
    add_library(bharat_mm_iommu OBJECT
        src/mm/iommu/iommu_stub.c
    )
endif()
target_link_libraries(bharat_mm_iommu PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
target_compile_options(bharat_mm_iommu PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

# Accelerator Memory Support
add_library(bharat_mm_accel OBJECT
    src/mm/accel/accel_mem.c
    src/mm/accel/accel_sg.c
    src/mm/accel/accel_iova.c
    src/mm/accel/accel_teardown.c
)
target_link_libraries(bharat_mm_accel PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
target_compile_options(bharat_mm_accel PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

# Advanced VM Tier (Conditionally Included)
if(BHARAT_ENABLE_ADVANCED_VM)
    add_library(bharat_mm_aspace OBJECT
        src/mm/vm/aspace/aspace.c
        src/mm/vm/aspace/vm_space.c
        src/mm/vm/aspace/vm_region_index.c
    )
    target_link_libraries(bharat_mm_aspace PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
    target_compile_options(bharat_mm_aspace PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

    add_library(bharat_mm_objects OBJECT
        src/mm/vm/objects/vm_object.c
        src/mm/vm/objects/vm_object_refcount.c
    )
    target_link_libraries(bharat_mm_objects PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
    target_compile_options(bharat_mm_objects PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

    add_library(bharat_mm_fault OBJECT
        src/mm/vm/fault/fault.c
    )
    target_link_libraries(bharat_mm_fault PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
    target_compile_options(bharat_mm_fault PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

    add_library(bharat_mm_pt OBJECT
        src/mm/pt/pt_pool.c
    )
    target_link_libraries(bharat_mm_pt PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
    target_compile_options(bharat_mm_pt PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

    add_library(bharat_mm_tlb OBJECT
        src/mm/tlb/tlb.c
        src/mm/tlb/tlb_flush.c
        src/mm/tlb/tlb_shootdown.c
        src/mm/tlb/tlb_pending.c
        src/mm/tlb/tlb_stats.c
        src/mm/tlb/tlb_asid.c
        src/mm/tlb/monitor_client.c
        src/mm/vm/aspace/aspace_switch.c
    )
    target_include_directories(bharat_mm_tlb PRIVATE ${CMAKE_SOURCE_DIR}/core/services/core/subsysmgr/include)
    target_link_libraries(bharat_mm_tlb PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
    target_compile_options(bharat_mm_tlb PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)

    add_library(bharat_mm_vmm OBJECT
        src/mm/vmm.c
        src/mm/vm/distributed/vm_mapping.c
        ${BHARAT_HAL_ROOT}/prot/none/prot_none_backend.c
        ${BHARAT_HAL_ROOT}/mmu_lite/common/mmu_lite_backend.c
        src/mm/vm/distributed/vm_compat_vmm.c
        src/mm/vm/distributed/mm_local.c
        src/mm/vm/distributed/mm_remote.c
    )
    target_link_libraries(bharat_mm_vmm PRIVATE bharat_kernel_includes bharat_kernel_buildopts)
    target_compile_options(bharat_mm_vmm PRIVATE $<$<COMPILE_LANGUAGE:C>:-ffreestanding> $<$<COMPILE_LANGUAGE:C>:-fno-builtin> $<$<COMPILE_LANGUAGE:C>:-fno-pic>)
endif()
# ── Core kernel sources ──────────────────────────────────────────────────────
set(BHARAT_KERNEL_SRC_ROOT "${CMAKE_SOURCE_DIR}/core/kernel/src")
if(NOT EXISTS "${BHARAT_KERNEL_SRC_ROOT}/core/CMakeLists.txt" OR NOT EXISTS "${BHARAT_KERNEL_SRC_ROOT}/init/CMakeLists.txt")
    message(FATAL_ERROR "Missing canonical kernel source root: ${BHARAT_KERNEL_SRC_ROOT}")
endif()

add_subdirectory("${BHARAT_KERNEL_SRC_ROOT}/core" "${CMAKE_CURRENT_BINARY_DIR}/src_core")
add_subdirectory(src/sched)
add_subdirectory(src/ipc)
add_subdirectory(src/cap)
add_subdirectory(src/personality)
add_subdirectory(src/trap)
add_subdirectory(src/debug)
add_subdirectory("${BHARAT_KERNEL_SRC_ROOT}/init" "${CMAKE_CURRENT_BINARY_DIR}/src_init")
add_subdirectory(src/fs)
add_subdirectory(src/ds)
add_subdirectory(src/lib)
add_subdirectory(src/tests)
add_subdirectory(src/monitor)

set(BHARAT_BOOT_ROOT "${CMAKE_SOURCE_DIR}/core/boot")
if(NOT EXISTS "${BHARAT_BOOT_ROOT}/src")
    message(FATAL_ERROR "Missing canonical boot source root: ${BHARAT_BOOT_ROOT}")
endif()

set(KERNEL_SRCS
    ${BOOT_SRC}
    src/mm/physmap.c
    src/mm/mem_model.c
    src/mm/mem_validator.c
    src/mm/footprint.c
    src/mm/prot_domain.c
    src/mm/user_range.c
    ${BHARAT_BOOT_ROOT}/common/boot_ui_select.c
    $<$<BOOL:${BHARAT_BOOT_GUI}>:src/display/boot_video.c>
    $<$<BOOL:${BHARAT_BOOT_GUI}>:src/display/display_handoff.c>
    $<$<BOOL:${BHARAT_BOOT_GUI}>:src/display/display_fallback.c>
    $<$<BOOL:${BHARAT_BOOT_GUI}>:src/display/boot_gui.c>
    src/kernel_boot.c
    ${BHARAT_BOOT_ROOT}/src/boot_info.c
    ${BHARAT_BOOT_ROOT}/src/boot_validate.c
    ${BHARAT_BOOT_ROOT}/src/boot_security.c
    ${BHARAT_BOOT_ROOT}/src/adapters/multiboot2/multiboot2_adapter.c
    ${BHARAT_BOOT_ROOT}/src/adapters/fdt/fdt_adapter.c
    ${BHARAT_BOOT_ROOT}/src/adapters/opensbi/opensbi_adapter.c
    ${BHARAT_BOOT_ROOT}/src/adapters/uboot/uboot_adapter.c
    ${BHARAT_BOOT_ROOT}/src/adapters/uefi/uefi_adapter.c
    src/display/fb_core.c
    src/profile/${KERNEL_PROFILE_LOWER}/profile.c
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_ARCH_ROOT}/x86/x86_64/boot/entry.c>
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_ARCH_ROOT}/x86/x86_64/boot/multiboot_parse.c>
    $<$<STREQUAL:${ARCH},arm32>:${BHARAT_ARCH_ROOT}/arm/arm32/boot/entry.c>
    $<$<STREQUAL:${ARCH},arm64>:${BHARAT_ARCH_ROOT}/arm/arm64/boot/entry.c>
    $<$<OR:$<STREQUAL:${ARCH},arm32>,$<STREQUAL:${ARCH},arm64>>:${BHARAT_ARCH_ROOT}/arm/boot/fdt_parse_common.c>
    $<$<STREQUAL:${ARCH},riscv32>:${BHARAT_ARCH_ROOT}/riscv/riscv32/boot/entry.c>
    $<$<STREQUAL:${ARCH},riscv64>:${BHARAT_ARCH_ROOT}/riscv/riscv64/boot/entry.c>
    $<$<OR:$<STREQUAL:${ARCH},riscv32>,$<STREQUAL:${ARCH},riscv64>>:${BHARAT_ARCH_ROOT}/riscv/boot/fdt_parse_common.c>
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-x86_64/board.c>
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_ARCH_ROOT}/x86/x86_64/boot_video_efi.c>
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-x86_64/machine_display.c>
    $<$<AND:$<STREQUAL:${ARCH},arm64>,$<STREQUAL:${KERNEL_PROFILE_LOWER},generic>>:${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-arm64/board.c>
    $<$<AND:$<STREQUAL:${ARCH},arm64>,$<STREQUAL:${KERNEL_PROFILE_LOWER},generic>>:${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-arm64/machine_display.c>
    $<$<AND:$<STREQUAL:${ARCH},arm64>,$<NOT:$<STREQUAL:${KERNEL_PROFILE_LOWER},generic>>>:${BHARAT_PLATFORM_ROOT}/boards/bcm2711-rpi4/board.c>
    $<$<AND:$<STREQUAL:${ARCH},arm32>,$<STREQUAL:${BHARAT_BOOT_HW_PROFILE},avh-corstone310>>:${BHARAT_PLATFORM_ROOT}/boards/avh-corstone310/board.c>
    $<$<AND:$<STREQUAL:${ARCH},riscv64>,$<STREQUAL:${BHARAT_RISCV_SOC_PROFILE},qemu-virt>>:${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-riscv64/board.c>
    $<$<AND:$<STREQUAL:${ARCH},riscv64>,$<NOT:$<STREQUAL:${BHARAT_RISCV_SOC_PROFILE},qemu-virt>>>:${BHARAT_PLATFORM_ROOT}/boards/shakti-ref/board.c>
    # NOTE: HAL sources removed - compiled via hal/* library targets instead
    ${ARCH_HAL}
    ${BHARAT_HAL_ROOT}/common/fdt_parser.c
    ${BHARAT_HAL_ROOT}/common/discovery.c
    ${ARCH_HAL_EXTRA}
    ${ARCH_CONTEXT_SWITCH}
    ${ARCH_CPU_CAPS_SRC}
    ${ARCH_CRYPTO_SRC}
    ${ARCH_TLB_ACCEL_SRC}
    # arch/common source files (fixed string.h dependency)
    ${BHARAT_ARCH_ROOT}/common/cpu_caps_state.c
    ${BHARAT_ARCH_ROOT}/common/accel_caps_publish.c
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_ARCH_ROOT}/x86/x86_64/arch_caps.c>
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_ARCH_ROOT}/x86/x86_64/arch_console.c>
    $<$<STREQUAL:${ARCH},x86_64>:${BHARAT_ARCH_HAL_ROOT}/x86/x86_64/hal_mm.c>
    $<$<STREQUAL:${ARCH},arm32>:${BHARAT_ARCH_ROOT}/arm/arm32/arch_console.c>
    $<$<STREQUAL:${ARCH},arm64>:${BHARAT_ARCH_ROOT}/arm/arm64/arch_caps.c>
    $<$<STREQUAL:${ARCH},arm64>:${BHARAT_ARCH_ROOT}/arm/arm64/arch_console.c>
    $<$<STREQUAL:${ARCH},arm64>:${BHARAT_ARCH_HAL_ROOT}/arm/arm64/hal_mm.c>
    $<$<STREQUAL:${ARCH},riscv64>:${BHARAT_ARCH_ROOT}/riscv/riscv64/arch_caps.c>
    $<$<STREQUAL:${ARCH},riscv64>:${BHARAT_ARCH_ROOT}/riscv/riscv64/arch_console.c>
    $<$<STREQUAL:${ARCH},riscv64>:${BHARAT_ARCH_HAL_ROOT}/riscv/riscv64/hal_mm.c>
    $<$<STREQUAL:${ARCH},arm32>:${BHARAT_ARCH_ROOT}/arm/arm32/arch_caps.c>
    $<$<STREQUAL:${ARCH},arm32>:${BHARAT_ARCH_HAL_ROOT}/arm/arm32/hal_mm.c>
    $<$<STREQUAL:${ARCH},riscv32>:${BHARAT_ARCH_ROOT}/riscv/riscv32/arch_caps.c>
    $<$<STREQUAL:${ARCH},riscv32>:${BHARAT_ARCH_HAL_ROOT}/riscv/riscv32/hal_mm.c>
    ${ARCH_EXT_STATE_SRC}
    ${BHARAT_HAL_ROOT}/common/hal_mem_backend.c
    ${BHARAT_HAL_ROOT}/common/iommu_adapter.c
    ${BHARAT_HAL_ROOT}/common/hal_dma_coherency.c
    ${BHARAT_HAL_ROOT}/common/hal_interrupt_common.c
    ${BHARAT_HAL_ROOT}/common/hal_timer_common.c
    ${BHARAT_HAL_ROOT}/common/hal_mmu_caps.c
    src/atomic64_fallback.c
    src/lib/base/status.c
    src/mm/dma/dma.c
    src/mm/zswap.c
    src/demo/hello_world.c
    src/demo/kernel_tester.c
    src/demo/bharat_demo.c
    src/tests/ktest_sched.c
    src/tests/sched/test_sched_invariants.c
    src/tests/ktest_prot_domain.c
    src/tests/ktest_basic_sanity.c
)

# ── Platform / Machine layer ────────────────────────────────────────────────
if(ARCH STREQUAL "x86_64")
    list(APPEND KERNEL_SRCS ${BHARAT_ARCH_ROOT}/x86/x86_64/platform/q35/boot/early_console.c)
elseif(ARCH STREQUAL "arm64")
    list(APPEND KERNEL_SRCS ${BHARAT_ARCH_ROOT}/arm/arm64/platform/qemu_virt/boot/early_console.c)
elseif(ARCH STREQUAL "riscv64")
    list(APPEND KERNEL_SRCS ${BHARAT_ARCH_ROOT}/riscv/riscv64/platform/qemu_virt/boot/early_console.c)
elseif(ARCH STREQUAL "arm32")
    list(APPEND KERNEL_SRCS ${BHARAT_ARCH_ROOT}/arm/arm32/platform/qemu_virt/boot/early_console.c)
elseif(ARCH STREQUAL "riscv32")
    list(APPEND KERNEL_SRCS ${BHARAT_ARCH_ROOT}/riscv/riscv32/platform/qemu_virt/boot/early_console.c)
endif()

# Make sure we link the platform layer correctly for symbol resolution
if(ARCH STREQUAL "x86_64")
    list(APPEND KERNEL_SRCS ${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-x86_64/platform_uart.c)
elseif(ARCH STREQUAL "arm64")
    list(APPEND KERNEL_SRCS ${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-arm64/platform_uart.c)
elseif(ARCH STREQUAL "riscv64")
    list(APPEND KERNEL_SRCS ${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-riscv64/platform_uart.c)
elseif(ARCH STREQUAL "arm32")
    list(APPEND KERNEL_SRCS ${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-arm32/platform_uart.c)
elseif(ARCH STREQUAL "riscv32")
    list(APPEND KERNEL_SRCS ${BHARAT_PLATFORM_ROOT}/boards/qemu-virt-riscv32/platform_uart.c)
endif()

# Make sure kernel targets can find platform headers
target_include_directories(bharat_kernel_includes INTERFACE ${BHARAT_PLATFORM_ROOT}/include)

list(APPEND KERNEL_SRCS
    src/display/boot_video_map.c
    ${BHARAT_KERNEL_SRC_ROOT}/boot/boot_mode.c
    ${BHARAT_KERNEL_SRC_ROOT}/boot/boot_selftest.c
)

# ── Kernel ELF ──────────────────────────────────────────────────────────────
add_executable(kernel.elf
    ${KERNEL_SRCS}
    $<TARGET_OBJECTS:bharat_mm_accel>
    $<TARGET_OBJECTS:bharatos_driver_accel>
    $<TARGET_OBJECTS:bharat_mm_iommu>
    $<TARGET_OBJECTS:bharat_mm_pmm>
    $<TARGET_OBJECTS:bharat_librbtree_obj>
    $<TARGET_OBJECTS:k_ds>
    $<TARGET_OBJECTS:k_core>
    $<TARGET_OBJECTS:k_sched>
    $<TARGET_OBJECTS:k_ipc>
    $<TARGET_OBJECTS:k_cap>
    $<TARGET_OBJECTS:k_trap>
    $<TARGET_OBJECTS:bharatos_kernel_personality>
    $<TARGET_OBJECTS:bharatos_personality_native>
    $<TARGET_OBJECTS:bharatos_personality_runtime>
    $<$<BOOL:${BHARAT_ENABLE_COMPAT_LINUX}>:$<TARGET_OBJECTS:bharatos_personality_linux>>
    $<$<BOOL:${BHARAT_ENABLE_COMPAT_LINUX}>:$<TARGET_OBJECTS:bharatos_personality_abi_linux>>
    $<$<BOOL:${BHARAT_ENABLE_COMPAT_ANDROID}>:$<TARGET_OBJECTS:bharatos_personality_android>>
    $<$<BOOL:${BHARAT_ENABLE_SUBSYS_WINDOWS}>:$<TARGET_OBJECTS:bharatos_personality_windows>>
    $<$<BOOL:${BHARAT_ENABLE_SUBSYS_AUTOMOTIVE}>:$<TARGET_OBJECTS:bharatos_personality_automotive>
    $<TARGET_OBJECTS:bharatos_stack_vehicle>>
    $<TARGET_OBJECTS:k_debug>
    $<TARGET_OBJECTS:k_init>
    $<TARGET_OBJECTS:k_fs>
    $<TARGET_OBJECTS:k_monitor>
)

# Always enable kernel selftests for test builds
set(BHARAT_ENABLE_KERNEL_SELFTESTS ON CACHE BOOL "Enable kernel self-tests")
if(BHARAT_ENABLE_KERNEL_SELFTESTS)
    add_compile_definitions(BHARAT_ENABLE_KERNEL_SELFTESTS=1)
    target_compile_definitions(bharat_kernel_buildopts INTERFACE BHARAT_ENABLE_KERNEL_SELFTESTS=1)
    target_sources(kernel.elf PRIVATE $<TARGET_OBJECTS:k_test_support>)
endif()

if(BHARAT_ENABLE_ADVANCED_VM)
    target_sources(kernel.elf PRIVATE
        $<TARGET_OBJECTS:bharat_mm_aspace>
        $<TARGET_OBJECTS:bharat_mm_objects>
        $<TARGET_OBJECTS:bharat_mm_fault>
        $<TARGET_OBJECTS:bharat_mm_pt>
        $<TARGET_OBJECTS:bharat_mm_tlb>
        $<TARGET_OBJECTS:bharat_mm_vmm>
    )
endif()
# Architecture-specific code model and PIE flags are set below
target_link_libraries(kernel.elf subsys_manager bharat_libmsg bharat_kernel_buildopts bharatos_drivers serial_drivers bharat_kernel_includes board_fabric bharat_platform_headers)
if(BHARAT_ENABLE_FBUI)
    target_link_libraries(kernel.elf fbui)
endif()
set_target_properties(kernel.elf PROPERTIES
    OUTPUT_NAME "kernel.elf"
    SUFFIX ""
)
# Extra warnings for C sources only
target_compile_options(kernel.elf PRIVATE
    $<$<COMPILE_LANGUAGE:C>:-ffreestanding>
    $<$<COMPILE_LANGUAGE:C>:-Wall>
    $<$<COMPILE_LANGUAGE:C>:-Wextra>
    $<$<COMPILE_LANGUAGE:C>:-Werror=implicit-function-declaration>
)
option(BHARAT_KERNEL_HARDENING "Enable kernel hardening compile/link options" ON)
option(BHARAT_KERNEL_ASLR "Build kernel as PIE for KASLR-friendly relocation experiments" OFF)
if(BHARAT_KERNEL_HARDENING)
    target_compile_options(kernel.elf PRIVATE
        $<$<COMPILE_LANGUAGE:C>:-fstack-protector-strong>
        $<$<COMPILE_LANGUAGE:C>:-fno-strict-aliasing>
        $<$<COMPILE_LANGUAGE:C>:-fno-delete-null-pointer-checks>
    )
    target_link_options(kernel.elf PRIVATE
        "-z"
        "noexecstack"
    )
else()
    target_compile_options(kernel.elf PRIVATE
        $<$<COMPILE_LANGUAGE:C>:-fno-stack-protector>
    )
endif()
if(BHARAT_KERNEL_ASLR)
    target_compile_options(kernel.elf PRIVATE
        $<$<COMPILE_LANGUAGE:C>:-fpie>
    )
    target_link_options(kernel.elf PRIVATE
        "LINKER:--pie"
    )
else()
    target_compile_options(kernel.elf PRIVATE
        $<$<COMPILE_LANGUAGE:C>:-fno-pie>
    )
    target_link_options(kernel.elf PRIVATE
        "LINKER:--no-pie"
    )
endif()
# ── Architecture-specific linker options ────────────────────────────────────
if(ARCH STREQUAL "x86_64")
    target_link_options(kernel.elf PRIVATE "LINKER:-m,elf_x86_64")
elseif(ARCH MATCHES "riscv.*64")
    target_link_options(kernel.elf PRIVATE "LINKER:-m,elf64lriscv")
elseif(ARCH MATCHES "arm.*64" OR ARCH MATCHES "aarch64")
    target_link_options(kernel.elf PRIVATE "LINKER:-m,aarch64elf")
elseif(ARCH STREQUAL "riscv32")
    target_link_options(kernel.elf PRIVATE "LINKER:-m,elf32lriscv")
elseif(ARCH STREQUAL "arm32")
    target_link_options(kernel.elf PRIVATE "LINKER:-m,armelf")
endif()
# ── Linker options
# Use LINKER: so CMake can translate options correctly when linking via the
# compiler driver across clang/gcc and host/cross presets.
target_link_options(kernel.elf PRIVATE
    "-nostdlib"
    $<$<AND:$<C_COMPILER_ID:Clang>,$<STREQUAL:${ARCH},arm32>>:-fuse-ld=lld>
    "LINKER:-no-pie"
    ""
    "LINKER:--fatal-warnings"
    "LINKER:-T,${LINKER_SCRIPT}"
    "LINKER:--build-id=none"
)

# ------------------------------------------------------------------------------
# Memory Debug Mode Configuration
# ------------------------------------------------------------------------------
option(BHARAT_MM_DEBUG "Enable kernel native memory hardening (e.g. poisoning, strict checks, ownership proofs)" OFF)
if(BHARAT_MM_DEBUG)
    message(STATUS "Bharat-OS Memory Debugging enabled (BHARAT_MM_DEBUG=ON)")
    target_compile_definitions(bharat_kernel_buildopts INTERFACE BHARAT_MM_DEBUG=1)
endif()

# ── Component Registration ──────────────────────────────────────────────────
bharat_register_component(
    TARGET kernel.elf
    KIND "kernel"
    VERSION "${BHARAT_KERNEL_VERSION}"
    IFACE_VERSION "${BHARAT_KERNEL_ABI}"
    CHANNEL "${BHARAT_OS_CHANNEL}"
)
if(ARCH STREQUAL "riscv64" AND BHARAT_RISCV_BUILD_PAYLOAD_BIN)
    if(NOT CMAKE_OBJCOPY)
        find_program(CMAKE_OBJCOPY NAMES llvm-objcopy riscv64-unknown-elf-objcopy)
    endif()
    if(NOT CMAKE_OBJCOPY)
        message(WARNING "objcopy not found; payload.bin target disabled")
    else()
        add_custom_command(
            OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/payload.bin"
            COMMAND ${CMAKE_OBJCOPY} -O binary $<TARGET_FILE:kernel.elf> "${CMAKE_CURRENT_BINARY_DIR}/payload.bin"
            DEPENDS kernel.elf
            COMMENT "Generating OpenSBI payload.bin from kernel.elf"
            VERBATIM
        )
        add_custom_target(kernel.payload.bin ALL DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/payload.bin")
    endif()
endif()

if(BHARAT_ENABLE_CONSTRAINTS)
    target_sources(kernel.elf PRIVATE
        ${BHARAT_KERNEL_SRC_ROOT}/core/constraints/constraints_common.c
        ${BHARAT_KERNEL_SRC_ROOT}/core/constraints/constraint_validate.c
        src/sys/sys_constraints.c
        src/sched/constraint_apply.c
        src/sched/constraint_trace.c
    )
endif()
